Overflow bugs resolved. New components added

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -4,6 +4,7 @@ body{
     margin:0;
     padding:0;
     width:100vw;
+    overflow-x:hidden;
 }
 nav{
     font-family:Roboto;
@@ -62,8 +63,7 @@ nav{
     display:flex;
     justify-content:center;
     align-items:center;
-    padding:15%;
-    margin-top:4%;
+    padding:20% 15% 15% 15%;
 }
 
 .headerDescription ul{
@@ -79,8 +79,8 @@ nav{
     color:black;
 }
 .headerDescription button{
-    margin-top:5%;
     font-family:Roboto;
+    margin-top:5%;
 }
 
 .ourBrand{
@@ -94,4 +94,12 @@ nav{
     font-weight:bold;
     font-size:40px;
     color:white;
+}
+
+.footerSection{
+    height:300px;
+    border:1px solid green;
+    width:100%;
+    overflow:hidden;
+    padding:0 5% 0 5%;
 }
